[project]
name = "duckdb-jupyter"
version = "0.1.0"
description = "A docker image with DuckDB and Jupyter Lab installed."
authors = [
    {name = "QuantumGhost", email = "obelisk.reg+git@gmail.com"},
]
dependencies = [
    "duckdb>=0.9.1",
    "pendulum>=2.1.2",
    "jupyterlab>=4.0.7",
    "polars[connectorx,numpy,pyarrow]>=0.19.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

