[project]
name = "duckdb-jupyter"
version = "0.1.0"
description = "A docker image with DuckDB and Jupyter Lab installed."
authors = [
    {name = "QuantumGhost", email = "obelisk.reg+git@gmail.com"},
]
dependencies = [
    "duckdb>=0.9.1",
    "pendulum>=2.1.2",
    "jupyterlab>=4.0.7",
    "polars[connectorx,numpy,pyarrow]>=0.19.8",
    "cytoolz>=0.12.2",
    "opendal>=0.41.0",
    "jupysql>=0.10.7",
    "duckdb-engine>=0.10.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
pandas = [
    "pandas>=2.1.0",
]
visualization = [
    "bokeh>=3.3.0",
    "altair>=5.1.2",
]
db-drivers = [
    "psycopg2>=2.9.9",
]
